# cramino

./: Cargo.toml
src/: calculations.rs  extract_from_bam.rs  main.rs
