[package]
name = "cramino"
version = "0.15.1"
edition = "2021"
authors = ["Wouter De Coster decosterwouter@gmail.com"]
license = "MIT"
description = "A tool to quickly extract quality metrics from bam or cram files"
readme = "README.md"
homepage = "https://github.com/wdecoster/cramino"
repository = "https://github.com/wdecoster/cramino"
keywords = ["ont", "pacbio", "cram", "bam", "alignment"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rust-htslib = "0.49.0"
rayon = "1.10.0"
hts-sys = "2.2.0"
